@@ -14,6 +14,7 @@ DFHack Future
     New Tweaks
     Misc Improvements
         added support for searching more lists
+        manipulator: current job as a view mode (in addition to profession and squad)
 
 DFHack 0.40.23-r1
     Internals
